<resources>
    <string name="app_name">ShooterDiary</string>
    <string name="diaryDate">Date</string>
    <string name="itemName">Diary item name</string>
    <string name="diary_note_text">Diary note</string>
    <string name="mantisx_score">MantisX Score</string>
    <string name="mantisx_firetype">Fire Type: </string>
    <string name="mantisx_firetype_value">Fire Type value</string>
    <string name="mantisx_item_hand">Main hand: </string>
    <string name="mantisx_hand_item_value">Main hand value</string>
    <string name="mantisx_item_firearm">Firearm: </string>
    <string name="mantisx_firearm_value">Firearm name</string>
    <string name="test_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque " +
        "corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia " +
        "deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, " +
        "cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, " +
        "omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates " +
        "repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores " +
        "alias consequatur aut perferendis doloribus asperiores repellat.</string>
    <string name="mantisx_shoots">10</string>
    <string name="diary_pager">Diary</string>
    <string name="timer_pager">Timer</string>
    <string name="submit">Submit</string>

</resources>